--- a/style.css
+++ b/style.css
@@ -13,8 +13,6 @@
   --search-color2:#503E33;
   --appointment1:#F2F2F2;
   --appointment2:#EBEBEB;
-
-  
 }
 
 .page-body {
@@ -30,9 +28,173 @@
   text-align: center;
 }
 
-.site-navigation a{
+/* Main header */
+
+.inner-page .main-header {
+  background-color: var(--basic-white);
+}
+
+.choose-options {
+  color: var(--basic-white);
+  background-color: var(--special-marin);
+  background-image: url("img/background_catalog.jpg");
+  background-position: 0 0;
+}
+
+/* Настройки */
+
+.option-text {
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  list-style: none;
+}
+
+.input-text{
+  color: var(--basic-white);
+  background-color: transparent;
+  outline: 2px solid #EEEEEE;
+  width: 317px;
+  height: 36px;
+  text-align: center;
+  }
+
+.option-title{
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 700;
+  border: none;
+}
+
+.button-view {
+  color: var(--basic-white);
+  text-transform: uppercase;
+  outline: 2px solid #EEEEEE;
+  width: 137px;
+  height: 36px;
+  background-color: transparent;
+  border: none;
+}
+
+/* Сортировка и поиск */
+.searching-title {
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.find {
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+
+.variety {
+  font-size: 12px;
+  line-height: 18px;
+  color:rgba(0, 0, 0, 0.3);
+  border-bottom: 1px dotted #81B3D2;
   text-decoration: none;
 }
+
+.variety:hover {
+  color:rgba(129, 179, 210, 0.5);
+  border-bottom: 1px dotted #81B3D2;
+  font-weight: 400;
+}
+
+.variety:focus {
+  color:rgba(0, 0, 0, 1);
+}
+
+.variety:visited {
+  color:rgba(129, 179, 210, 0.5);
+  text-decoration: none;
+  border-bottom:none;
+}
+
+/* Отели */
+
+.hotels-list {
+  color: #000000;
+  font-size: 21px;
+  line-height: 26px;
+  text-decoration: none;
+  font-weight: 700;
+  list-style: none;
+}
+
+.hotels-list:hover{
+  color: #81B3D2;
+}
+
+.hotels-list:focus{
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.hotels-variety {
+  font-size: 14px;
+  line-height: 21px;
+  text-decoration: none;
+  font-weight: 400;
+}
+
+.hotel-raiting {
+  width: 110px;
+  height: 27px;
+  background: #F2F2F2;
+  text-align: center;
+}
+
+.button-more{
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #EEEEEE;
+  background-color: #81B3D2;
+  border: none;
+  width: 110px;
+  height: 27px;
+}
+
+.button-more:hover{
+  background-color: #669EC0;
+}
+
+.button-more:focus{
+  background-color: #5496BD;
+  color:rgba(255, 255, 255, 0.3);
+}
+
+.button-reserve{
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #EEEEEE;
+  background-color: #766357;
+  border: none;
+  width: 142px;
+  height: 27px;
+}
+
+.button-reserve:hover{
+  background-color: #604E43;
+}
+
+.button-reserve:focus{
+  background-color: rgba(80, 62, 51, 1);
+  color:rgba(255, 255, 255, 0.3);
+}
+
+
+.site-navigation a {
+  text-decoration: none;
+}
+
+/* Главная страница */
 
 img {
   max-width: 100%;
