--- a/style.css
+++ b/style.css
@@ -243,7 +243,6 @@ img {
 
 .main-navigation-wrapper {
   display: grid;
-  grid-template-columns: 1fr min-content;
   background-color: var(--basic-white);
   width: 1200px;
   margin: 0 auto;
@@ -251,11 +250,24 @@ img {
 }
 
 .site-navigation {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 2fr;
   margin: 0;
   padding: 0;
   outline: 5px solid rgba(0, 255, 255, 0.3);
   outline-offset: -5px;
   list-style: none;
+  padding: 10px;
+}
+
+.right{
+  text-align: right;
+  align-items: center;
+}
+
+.left{
+  text-align: left;
+  align-items: center;
 }
 
 /* User navigation */
@@ -276,6 +288,10 @@ img {
   color: var(--special1);
 }
 
+.introduction {
+  background-image: url("img/background photo.jpg");
+}
+
 .introduction p{
   font-weight:400;
   line-height: 26px;
@@ -287,25 +303,54 @@ img {
 }
 
 .reasons-list {
+  display: grid;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-
-.reasons-item-blue h3 {
-  font-size: 21px;
-  line-height: 21px;
-}
-
 .reasons-item-blue {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: var(--special-marin);
   color: var(--basic-white);
   outline: 5px solid rgba(0, 255, 255 , 0.3);
   outline-offset: -5px;
 }
+
+.picture-house{
+  grid-column: 2/4;
+  grid-row: 1/2;
+}
+
+.style{
+  display: contents;
+  }
+
+.style-1 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+.style-2 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.style-3 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+
+
+
+.reasons-item-blue h3 {
+  display: grid;
+  font-size: 21px;
+  line-height: 21px;
+}
+
+
 
 .reasons-inside h3{
   font-size: 21px;
@@ -323,6 +368,16 @@ img {
   column-gap: 20px;
 }
 
+.picture-canyon {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+
+.text-devil {
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+
 .reasons-item-grey h3 {
   background-color: var(--somehow-grey);
   color: var(--basic-black);
@@ -334,6 +389,25 @@ img {
   color: var(--basic-black);
   outline: 5px solid rgba(0, 0, 20, 0.3);
   outline-offset: -5px;
+}
+
+.item-1 {
+  grid-column: 1/2;
+  grid-row: 1/5;
+}
+
+.item-2 {
+  grid-column: 2/3;
+  grid-row: 1/5;
+}
+
+.item-3 {
+  grid-column: 3/4;
+  grid-row: 1/5;
+}
+
+.information{
+  display: grid;
 }
 
 .appointment h2{
@@ -426,10 +500,31 @@ img {
 
 
 .main-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   color: var(--basic-black);
   background-color: var(--basic-white);
   background-position: 0 0;
   outline: 5px solid rgba(255, 0, 0, 0.7);
+  outline-offset: -5px;
+  width: 1200px;
+  height: 120px;
+  text-align: center;
+  align-items: center;
+}
+
+.contacts {
+  outline: 5px solid rgba(0, 255, 255, 0.7);
+  outline-offset: -5px;
+}
+
+.footer-social{
+  outline: 5px solid rgba(0, 255, 0, 0.7);
+  outline-offset: -5px;
+}
+
+.footer-copyright {
+  outline: 5px solid rgba(255, 0, 255, 0.7);
   outline-offset: -5px;
 }
 
